@@ -281,7 +281,7 @@ static int already_done = 0;
 	global_table[GET_SERVER_MOTD]		= (Function_ptr) BX_get_server_motd;
 	global_table[GET_SERVER_OPERATOR]	= (Function_ptr) BX_get_server_operator;
 	global_table[GET_SERVER_VERSION]	= (Function_ptr) BX_get_server_version;
-	global_table[GET_SERVER_FLAG]		= (Function_ptr) BX_get_server_flag;
+	global_table[GET_SERVER_UMODE]		= (Function_ptr) BX_get_server_umode;
 	global_table[GET_SERVER_PORT]		= (Function_ptr) BX_get_server_port;
 	global_table[GET_SERVER_LAG]		= (Function_ptr) BX_get_server_lag;
 	global_table[GET_SERVER2_8]		= (Function_ptr) BX_get_server2_8;
